Remove deprecated set-output command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,12 @@ jobs:
 
     - name: Extract version
       id: version
-      run: echo ::set-output name=VERSION::${GITHUB_REF#refs\/tags\/v}
+      run: echo version=${GITHUB_REF#refs\/tags\/v} >> $GITHUB_OUTPUT
 
     - name: Build and deploy to Clojars
       uses: yetanalytics/actions/deploy-clojars@v0.0.4
       with:
           artifact-id: 'pathetic'
-          version: ${{ steps.version.outputs.VERSION }}
+          version: ${{ steps.version.outputs.version }}
           clojars-username: ${{ secrets.CLOJARS_USERNAME }}
           clojars-deploy-token: ${{ secrets.CLOJARS_DEPLOY_TOKEN }}
